--- a/media/less/style/chat/browser.less
+++ b/media/less/style/chat/browser.less
@@ -77,15 +77,8 @@
 .lcb-rooms-list-item-last-active {
     font-size: 12px;
     font-weight: 300;
-    position: absolute;
-    right: 15px;
-    bottom: 10px;
-    @media (max-width: @screen-sm-max) {
-        position: relative;
-        float: right;
-        right: 0;
-        bottom: 0;
-    }
+    position: relative;
+    float: right;
 }
 
 .lcb-rooms-list-users,
